exercise/manifests/003-echo-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/component: echo
  annotations: # TODO: ingress annotations
    external-dns.alpha.kubernetes.io/provider: public
    external-dns.alpha.kubernetes.io/target: 178.63.69.250,2a01:4f8:121:14e2:100:3:3:1
spec:
  rules:
    - host: echo.demo.cluster.classroom.bswe.hochschule-burgenland.muehlbachler.xyz
      http:
        paths:
          - backend:
              service:
                name: echo
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
